# vsrs

./: CMakeLists.txt  README.md  git.sh  run.sh
CommonLibStatic/: CommonLibStaticVC11.vcxproj  CommonLibStaticVC8.vcproj
CommonLibStatic/include/: ConfigBase.h  InputStream.h  ParameterBase.h  Parser.h  SingletonTemplate.h  Tools.h  upsample.h  yuv.h
CommonLibStatic/src/: ConfigBase.cpp  InputStream.cpp  ParameterBase.cpp  Parser.cpp  yuv.cpp
ViewSyn/: ViewSynVC11.vcxproj  ViewSynVC8.vcproj
ViewSyn/src/: VSRS.cpp  ViewSyn.cpp
ViewSynLibStatic/: ViewSynLibStaticVC11.vcxproj  ViewSynLibStaticVC8.vcproj
ViewSynLibStatic/include/: BounaryNoiseRemoval.h  BoundaryNoiseRemoval.h  Camera.h  CameraManager.h  ConfigCam.h  ConfigSyn.h  ImageDepth.h  ImageHole.h  ParameterViewInterpolation.h  Sample.h  ViewInterpolation.h  ViewSynthesis.h  ViewSynthesis1D.h  ViewSynthesisGeneral.h  version.h
ViewSynLibStatic/src/: BoundaryNoiseRemoval.cpp  Camera.cpp  ConfigCam.cpp  ConfigSyn.cpp  ParameterViewInterpolation.cpp  Sample.cpp  ViewInterpolation.cpp  ViewSynthesis.cpp  ViewSynthesis1D.cpp  ViewSynthesisGeneral.cpp
camera_parameter_files/: calib_params005003750438_070.cfg
cmake-modules/: FindOpenCV.cmake
configuration_files/: virtual_005003750438_0000.cfg  virtual_005003750438_0300.cfg  virtual_005003750438_0600.cfg
doc/: Doxyfile  M40657 VSRS4.2.docx  SoftwareManualVSRS.doc  classDesign.txt  engineering.txt  notes.todo  reunion1.txt  vsrs_changes.txt  vtk.txt
doc/configuration_files/: virtual_005003750438_0000.cfg  virtual_005003750438_0300.cfg  virtual_005003750438_0600.cfg
doc/doxygen/: Doxyfile
doc/html/: _bounary_noise_removal_8h_source.html  _parameter_base_8h_source.html  _parameter_view_interpolation_8h_source.html  _view_interpolation_8h_source.html  _view_synthesis_8h_source.html  _visbd_8h_source.html  annotated.html  class_c_boundary_noise_removal-members.html  class_c_boundary_noise_removal.html  class_c_camera_parameters-members.html  class_c_camera_parameters.html  class_c_i_yuv-members.html  class_c_i_yuv.html  class_c_parameter_view_interpolation-members.html  class_c_parameter_view_interpolation.html  class_c_picture_resample-members.html  class_c_picture_resample.html  class_c_view_interpolation-members.html  class_c_view_interpolation.html  class_c_view_interpolation1_d-members.html  class_c_view_interpolation1_d.html  class_c_view_interpolation_general-members.html  class_c_view_interpolation_general.html  class_config_line_base-members.html  class_config_line_base.html  class_config_line_char-members.html  class_config_line_char.html  class_config_line_dbl-members.html  class_config_line_dbl.html  class_config_line_int-members.html  class_config_line_int.html  class_config_line_str-members.html  class_config_line_str.html  class_config_line_u_int-members.html  class_config_line_u_int.html  class_parameter_base-members.html  class_parameter_base.html  classes.html  dir_070e317a4c34542b0ffe1ec11923448a.html  dir_0c435a32d87c05bc1fe5165e27002446.html  (+23 more)
doc/latex/: annotated.tex  class_c_boundary_noise_removal.tex  class_c_camera_parameters.tex  class_c_i_yuv.tex  class_c_parameter_view_interpolation.eps  class_c_parameter_view_interpolation.tex  class_c_picture_resample.tex  class_c_view_interpolation.tex  class_c_view_interpolation1_d.tex  class_c_view_interpolation_general.tex  class_config_line_base.eps  class_config_line_base.tex  class_config_line_char.eps  class_config_line_char.tex  class_config_line_dbl.eps  class_config_line_dbl.tex  class_config_line_int.eps  class_config_line_int.tex  class_config_line_str.eps  class_config_line_str.tex  class_config_line_u_int.eps  class_config_line_u_int.tex  class_parameter_base.eps  class_parameter_base.tex  dir_070e317a4c34542b0ffe1ec11923448a.tex  dir_0c435a32d87c05bc1fe5165e27002446.tex  dir_1696a2aa093b742bd8c96ff086af8c2c.tex  hierarchy.tex  refman.tex  (+11 more)
windows/: VSRSVC11.sln  VSRSVC8.sln
(+678 files in other folders)
